--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "d3": "^5.0.0",
     "d3-shape": "^1.2.0",
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.3"
+    "react-native": "0.54.3",
+    "react-native-slider": "^0.11.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
